--- a/index.html
+++ b/index.html
@@ -904,6 +904,16 @@
                     <h3>Entrega</h3>
                     <p>Empaquetamos cuidadosamente tu pedido y coordinamos la entrega. Tu satisfacción es nuestra máxima prioridad.</p>
                 </div>
+                    <div class="process-step">
+                    <div class="step-number">7</div>
+                    <h3>Entrega</h3>
+                    <p>Arrriba de 500 pesos gastados en producto te  incluiremos envio gratis.</p>
+                 </div>
+                    <div class="NOTA">
+                    <div class="step-number">7</div>
+                    <h3>Entrega</h3>
+                    <p>Seleccionando entre petg blanco,PLA Azul o Naranja el producto se entregara mas rapido por disponjibilidad de material.</p>
+                 </div>
             </div>
         </section>
     </div>
