Refactor process steps and add important notes

--- a/index.html
+++ b/index.html
@@ -873,47 +873,51 @@
                 <h2 class="section-title">Proceso Simple y Transparente</h2>
                 <p class="section-description">Desde tu idea inicial hasta el producto final en tu mano, te acompañamos en cada paso del camino</p>
             </div>
-            <div class="process-grid">
-                <div class="process-step">
-                    <div class="step-number">1</div>
-                    <h3>Consulta Inicial</h3>
-                    <p>Completa el formulario con los detalles de tu proyecto. Revisamos tu solicitud y te contactamos para aclarar dudas y optimizar el diseño.</p>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">2</div>
-                    <h3>Cotización Detallada</h3>
-                    <p>Recibes un presupuesto completo con costos de material, tiempo de impresión, y sugerencias técnicas para mejorar tu proyecto.</p>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">3</div>
-                    <h3>Confirmación</h3>
-                    <p>Una vez aprobada la cotización, compramos el filamento específico y programamos tu impresión con prioridad en nuestra cola de producción.</p>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">4</div>
-                    <h3>Producción</h3>
-                    <p>Imprimimos tu pieza con configuraciones optimizadas. Te mantenemos informado del progreso y compartimos fotos del resultado.</p>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">5</div>
-                    <h3>Control de Calidad</h3>
-                    <p>Inspeccionamos cada pieza minuciosamente. Si es necesario, realizamos post-procesamiento para garantizar un acabado impecable.</p>
-                </div>
-                <div class="process-step">
-                    <div class="step-number">6</div>
-                    <h3>Entrega</h3>
-                    <p>Empaquetamos cuidadosamente tu pedido y coordinamos la entrega. Tu satisfacción es nuestra máxima prioridad.</p>
-                </div>
-                    <div class="process-step">
-                    <div class="step-number">7</div>
-                    <h3>Entrega</h3>
-                    <p>Arrriba de 500 pesos gastados en producto te  incluiremos envio gratis.</p>
-                 </div>
-                    <div class="NOTA">
-                    <div class="step-number">7</div>
-                    <h3>Entrega</h3>
-                    <p>Seleccionando entre petg blanco,PLA Azul o Naranja el producto se entregara mas rapido por disponjibilidad de material.</p>
-                 </div>
+           <div class="process-grid">
+    <div class="process-step">
+        <div class="step-number">1</div>
+        <h3>Consulta Inicial</h3>
+        <p>Completa el formulario con los detalles de tu proyecto. Revisamos tu solicitud y te contactamos para aclarar dudas y optimizar el diseño.</p>
+    </div>
+    <div class="process-step">
+        <div class="step-number">2</div>
+        <h3>Cotización Detallada</h3>
+        <p>Recibes un presupuesto completo con costos de material, tiempo de impresión, y sugerencias técnicas para mejorar tu proyecto.</p>
+    </div>
+    <div class="process-step">
+        <div class="step-number">3</div>
+        <h3>Confirmación</h3>
+        <p>Una vez aprobada la cotización, compramos el filamento específico y programamos tu impresión con prioridad en nuestra cola de producción.</p>
+    </div>
+    <div class="process-step">
+        <div class="step-number">4</div>
+        <h3>Producción</h3>
+        <p>Imprimimos tu pieza con configuraciones optimizadas. Te mantenemos informado del progreso y compartimos fotos del resultado.</p>
+    </div>
+    <div class="process-step">
+        <div class="step-number">5</div>
+        <h3>Control de Calidad</h3>
+        <p>Inspeccionamos cada pieza minuciosamente. Si es necesario, realizamos post-procesamiento para garantizar un acabado impecable.</p>
+    </div>
+    <div class="process-step">
+        <div class="step-number">6</div>
+        <h3>Entrega</h3>
+        <p>Empaquetamos cuidadosamente tu pedido y coordinamos la entrega. Tu satisfacción es nuestra máxima prioridad.</p>
+    </div>
+</div>
+
+<!-- Notas Importantes -->
+<div class="info-boxes" style="margin-top: 3rem;">
+    <div class="info-box">
+        <h3>🚚 Envío Gratis</h3>
+        <p>En compras mayores a <strong>$500 pesos</strong> en producto, el envío corre por nuestra cuenta. Entregamos en toda la zona metropolitana.</p>
+    </div>
+    
+    <div class="info-box">
+        <h3>⚡ Entrega Express</h3>
+        <p>Tenemos disponibilidad inmediata de <strong>PETG Blanco</strong>, <strong>PLA Azul</strong> y <strong>PLA Naranja</strong>. Selecciona estos colores para recibir tu pedido en tiempo récord.</p>
+    </div>
+</div>
             </div>
         </section>
     </div>
