--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ImpresVlad 3DS - Impresión 3D Profesional</title>
+    <title>CREATIF 3DS - Impresión 3D Profesional</title>
     <style>
         * {
             margin: 0;
@@ -650,7 +650,7 @@
     <!-- Navegación -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">ImpresVlad 3DS</div>
+            <div class="logo">CREARIF 3DS</div>
             <div class="menu-toggle" id="menuToggle">
                 <span></span>
                 <span></span>
@@ -698,7 +698,7 @@
         <section class="section" id="servicios">
             <div class="section-header">
                 <span class="section-label">Nuestras Ventajas</span>
-                <h2 class="section-title">¿Por Qué Elegir ImpresVlad 3DS?</h2>
+                <h2 class="section-title">¿Por Qué Elegir CREATIF 3DS?</h2>
                 <p class="section-description">Combinamos tecnología avanzada, materiales premium y un enfoque centrado en el cliente para entregar resultados excepcionales</p>
             </div>
             <div class="features-grid">
@@ -925,16 +925,16 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">ImpresVlad 3DS</div>
+            <div class="footer-logo">CREATIF 3DS</div>
             <p class="footer-tagline">Impresión 3D de Calidad Profesional</p>
             
             <div class="footer-contact">
-                <p><strong>📧 Contacto:</strong> impresvlad3ds@gmail.com</p>
+                <p><strong>📧 Contacto:</strong> creatif3DS@gmail.com</p>
                 <p><strong>📍 Ubicación:</strong> Ciudad Madero, Tamaulipas, México</p>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 ImpresVlad 3DS. Todos los derechos reservados.</p>
+                <p>&copy; 2025 CREATIF 3DS. Todos los derechos reservados.</p>
                 <p>Transformando ideas en realidad, una capa a la vez.</p>
             </div>
         </div>
