--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <!-- Navegación -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">CREARIF 3DS</div>
+            <div class="logo">CREATIF 3DS</div>
             <div class="menu-toggle" id="menuToggle">
                 <span></span>
                 <span></span>
